ci: pin the docs version check to the latest release tag, not the closest one
The docs-integrity job compared the README's install snippets against
`git describe --tags --abbrev=0`, which returns the closest reachable tag.
Once a rolling `early-access` marker tag landed on main's tip, that became
the "latest tag" and every PR failed with "README install snippet does not
pin early-access" — including dependabot's, which touched nothing related.

Select the highest semver release tag explicitly, skip when no release tag
exists yet, and strip only a leading "v" (`tr -d v` deleted every "v" in
the string). Echoes the version it checked so a future mismatch is legible
from the log.